test/parser/should_fail/pragma1.souc.bad
import directovis

{^; this is unclosed
main() = do
	x <- 42 ; a comment
	print x ;}
